--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.3.4",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
+    "ffmpeg": "^0.0.4",
     "nodemon": "^2.0.20",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.19.4"
