remove unnecessary stuff

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
 .wwebjs_auth
 node_modules
-
 .env
 .env.local
+
+# managed by open-wa
+**.data.json
+**.node-persist**
+**_IGNORE_**
+# end managed by open-wa
+
+dummy
