--- a/package.json
+++ b/package.json
@@ -1,33 +1,30 @@
 {
   "name": "ryuko-matoi",
   "version": "1.0.0",
-  "main": "./src/index.ts",
+  "main": "./src/main.ts",
   "scripts": {
-    "dev": "nodemon ./src/index.ts",
-    "start": "ts-node ./src/index.ts",
     "commit": "cz",
     "lint": "eslint --fix"
   },
   "dependencies": {
-    "axios": "^1.4.0",
-    "date-fns": "^2.30.0",
-    "dotenv": "^16.1.4",
-    "nodemon": "^2.0.22",
+    "axios": "^1.7.9",
+    "date-fns": "^4.1.0",
+    "dotenv": "^16.4.7",
+    "openai": "^4.83.0",
     "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "^1.21.0"
+    "whatsapp-web.js": "^1.26.0"
   },
   "devDependencies": {
-    "@types/node": "^20.3.0",
-    "@types/qrcode-terminal": "^0.12.0",
-    "@typescript-eslint/eslint-plugin": "^5.59.11",
-    "@typescript-eslint/parser": "^5.59.11",
-    "commitizen": "^4.3.0",
+    "@types/node": "^22.13.1",
+    "@types/qrcode-terminal": "^0.12.2",
+    "@typescript-eslint/eslint-plugin": "^8.23.0",
+    "@typescript-eslint/parser": "^8.23.0",
+    "commitizen": "^4.3.1",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.42.0",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
-    "prettier": "^2.8.8",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.3"
+    "eslint": "^9.19.0",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "prettier": "^3.4.2",
+    "typescript": "^5.7.3"
   },
   "config": {
     "commitizen": {
