--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "./src/main.ts",
   "scripts": {
     "commit": "cz",
-    "lint": "eslint --fix"
+    "lint": "eslint --fix",
+    "dev": "bun src/main.ts --watch"
   },
   "dependencies": {
     "axios": "^1.7.9",
