docs: more proper documentation, and add MIT License

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,9 @@
-OPEN_AI_API_KEY=your open ai api key
-REMOVE_BG_API_KEY=your remove bg api key
+OPEN_AI_API_KEY
+REMOVE_BG_API_KEY
+REMOVE_BG_API_URL
+JOKES_API_URL
+ANIME_QUOTE_API_URL
+DISTRO_INFO_API_URL
+DOA_API_URL
+QURAN_API_URL
+IMAGE_API_URL
