refactor(services): rename services naming file, replace open ai with gemini, and create ocr service

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,4 +1,13 @@
-.git
-.wwebjs_auth
-dist
 node_modules
+.git
+.gitignore
+.env
+.env.*
+.wwebjs_auth
+.wwebjs_cache
+dist
+*.log
+.vscode
+.idea
+README.md
+LICENSE
