--- a/package.json
+++ b/package.json
@@ -12,24 +12,25 @@
     "dev": "bun src/main.ts --watch"
   },
   "dependencies": {
-    "axios": "^1.7.9",
+    "@google/genai": "^1.14.0",
+    "axios": "^1.11.0",
     "date-fns": "^4.1.0",
-    "dotenv": "^16.4.7",
-    "openai": "^4.83.0",
+    "dotenv": "^17.2.1",
     "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "^1.26.0"
+    "tesseract.js": "^6.0.1",
+    "whatsapp-web.js": "^1.32.0"
   },
   "devDependencies": {
-    "@types/node": "^22.13.1",
+    "@types/node": "^22.17.1",
     "@types/qrcode-terminal": "^0.12.2",
-    "@typescript-eslint/eslint-plugin": "^8.23.0",
-    "@typescript-eslint/parser": "^8.23.0",
+    "@typescript-eslint/eslint-plugin": "^8.39.1",
+    "@typescript-eslint/parser": "^8.39.1",
     "commitizen": "^4.3.1",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^9.19.0",
+    "eslint": "^9.33.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
-    "prettier": "^3.4.2",
-    "typescript": "^5.7.3"
+    "prettier": "^3.6.2",
+    "typescript": "^5.9.2"
   },
   "config": {
     "commitizen": {
