--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,10 @@
-OPEN_AI_API_KEY
 REMOVE_BG_API_KEY
 REMOVE_BG_API_URL
+OPEN_AI_API_KEY
 JOKES_API_URL
 ANIME_QUOTE_API_URL
 DISTRO_INFO_API_URL
 DOA_API_URL
 QURAN_API_URL
 IMAGE_API_URL
+GEMINI_API_KEY
