--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.1",
     "qrcode-terminal": "^0.12.0",
+    "slugify": "^1.6.6",
     "tesseract.js": "^6.0.1",
     "whatsapp-web.js": "^1.32.0"
   },
