--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "dev": "bun src/main.ts --watch"
   },
   "dependencies": {
+    "@dotenvx/dotenvx": "^1.48.4",
     "@google/genai": "^1.14.0",
     "axios": "^1.11.0",
     "date-fns": "^4.1.0",
-    "dotenv": "^17.2.1",
     "qrcode-terminal": "^0.12.0",
     "slugify": "^1.6.6",
     "tesseract.js": "^6.0.1",
