refactor: service naming, axios config, and configure absolute path

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,11 +7,11 @@
     "strict": true,
     "skipLibCheck": true,
     "outDir": "./dist",
+    "rootDir": "./src",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   },
-  "include": [
-    "./src",
-  ],
-  "exclude": [
-    "./node_modules"
-  ]
+  "include": ["./src"],
+  "exclude": ["./node_modules"]
 }
