--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "author": "Haikel Ilham Hakim",
   "private": true,
-  "description": "A Whatsapp bot for my personal usage",
+  "description": "A Whatsapp bot for personal usage",
   "license": "MIT",
   "main": "./src/main.ts",
   "scripts": {
@@ -16,6 +16,8 @@
     "@google/genai": "^1.14.0",
     "axios": "^1.11.0",
     "date-fns": "^4.1.0",
+    "pino": "^9.9.0",
+    "pino-pretty": "^13.1.1",
     "qrcode-terminal": "^0.12.0",
     "slugify": "^1.6.6",
     "tesseract.js": "^6.0.1",
