fix: docker configurations

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,9 @@
-version: "3.8"
-
 services:
-  whatsapp-bot:
+  ryuko-matoi:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: whatsapp-bot
+    container_name: ryuko-matoi
     restart: unless-stopped
     env_file:
       - .env
